--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>ESP32 Firebase Control</title>
+    <title>ESP32 Firebase Auth Control</title>
     <meta charset="UTF-8">
 </head>
 <body>
-    <h2>ESP32 Firebase Control Panel</h2>
+    <h2>ESP32 Firebase Auth Control</h2>
 
-    <div>
+    <!-- Login Form -->
+    <div id="loginForm">
         <input type="email" id="email" placeholder="Email">
         <input type="password" id="password" placeholder="Password">
         <button id="loginBtn">Login</button>
@@ -15,42 +16,35 @@
 
     <hr>
 
+    <!-- Controls (only visible after login) -->
     <div id="controls" style="display:none;">
         <h3>Light Control</h3>
         <button onclick="setLight(true)">Turn ON</button>
         <button onclick="setLight(false)">Turn OFF</button>
         <p>Light Status: <span id="lightStatus">Unknown</span></p>
+        <button onclick="logout()">Logout</button>
     </div>
 
     <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-database.js"></script>
+    <script src="config.js"></script> <!-- Firebase config in separate file -->
 
     <script>
-        // TODO: Replace with your Firebase config
-        const firebaseConfig = {
-            apiKey: "YOUR_WEB_API_KEY",
-            authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-            databaseURL: "YOUR_DATABASE_URL",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_PROJECT_ID.appspot.com",
-            messagingSenderId: "YOUR_SENDER_ID",
-            appId: "YOUR_APP_ID"
-        };
-
         // Initialize Firebase
         const app = firebase.initializeApp(firebaseConfig);
         const auth = firebase.auth();
         const database = firebase.database();
 
-        // Login button handler
+        // Login button click
         document.getElementById("loginBtn").addEventListener("click", () => {
             const email = document.getElementById("email").value;
             const password = document.getElementById("password").value;
 
             auth.signInWithEmailAndPassword(email, password)
                 .then(() => {
+                    document.getElementById("loginForm").style.display = "none";
                     document.getElementById("controls").style.display = "block";
                     listenLightStatus();
                 })
@@ -59,16 +53,24 @@
                 });
         });
 
-        // Set light status in database
+        // Set light value
         function setLight(state) {
             database.ref("light").set(state);
         }
 
-        // Listen for light changes
+        // Listen for light value changes
         function listenLightStatus() {
             database.ref("light").on("value", (snapshot) => {
                 const status = snapshot.val();
                 document.getElementById("lightStatus").innerText = status ? "ON" : "OFF";
+            });
+        }
+
+        // Logout
+        function logout() {
+            auth.signOut().then(() => {
+                document.getElementById("controls").style.display = "none";
+                document.getElementById("loginForm").style.display = "block";
             });
         }
     </script>
